Third commit info modified

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="icon" href="res/images/Favicon.ico"> 
         <link rel="stylesheet" href="res/css/style.css"> 
-        <strong>Welcome to your dashboard!</strong>
+        <strong> Welcome to your dashboard!</strong>
         <title>My Dashboard</title> 
         <script type="text/javascript" src="src"></script>
     </head> 
@@ -16,8 +16,8 @@
     </div> 
     <div> 
         <ul> 
-            <li>Your name</li> 
-            <li> A date following this format dd/mm/yyyy</li> 
+            <li> My name </li> 
+            <li> 01/10/2030 </li> 
             <li> Software Engineering </li> 
         </ul> 
     </div> 
@@ -85,7 +85,7 @@
         <option value="spring">Spring</option>
         <option value="summer">Summer</option>
     </select><br><br>
-    <label for="attendance">Attendance:</label>
+    <label for="attendance">Attendance:</label><br>
     <input type="radio" id="virtual" name="attendance" value="virtual">
     <label for="virtual">Virtual attendance</label><br>
     <input type="radio" id="physical" name="attendance" value="physical">
@@ -97,11 +97,6 @@
  
 
     <body> 
-
-
-
-        
-
 
         <footer> 
             <ul> 
